Pruebas colores y background

--- a/index.html
+++ b/index.html
@@ -1,164 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="icon" type="image/png" href="assets/datalogo.png" />
-    -->
-    <title>dataclougui</title>
-    <meta
-      name="description"
-      content="Hola, soy Guillermo, Ingeniero mecatrónico apasionado por la programación, la nube, el manejo y la extracción de datos."
-    />
-    <meta property="og:title" content="dataclougui" />
-    <meta
-      property="og:description"
-      content="Hola, soy Guillermo, Ingeniero mecatrónico apasionado por la programación, la nube, el manejo y la extracción de datos."
-    />
-    <meta property="og:image" content="assets/fotoguillermo.jpg" />
-    <meta property="og:url" content="https://datacloudgui.com" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <nav class="menu">
-      <div class="menu--content">
-        <div class="menu--content__logo">
-          <a href="/"
-            ><img src="assets/Datacloud2.png" alt="Datacloudgui"
-          /></a>
-        </div>
-        <div class="menu--content__item">
-          <a href="#proyectos" rel="noopener noreferrer">Mi portafolio</a>
-        </div>
-        <div class="menu--content__item">
-          <a href="#" rel="noopener noreferrer">Mi hoja de vida</a>
-        </div>
-        <div class="menu--content__item">
-          <a href="#" rel="noopener noreferrer">Contacto</a>
-        </div>
-      </div>
-    </nav>
 
-    <section class="data">
-      <div class="data--container">
-        <div class="data--container__img">
-          <img src="assets/fotoguillermo.jpg" alt="Guillermo foto" />
-        </div>
-        <div class="data--container__title">
-          <p class="title">Guillermo Sánchez</p>
-        </div>
-        <div class="data--container__description">
-          <p>
-            Ingeniero mecatrónico apasionado por la programación, la nube, <strong>el manejo y la extracción de datos</strong>. 
-            Con experiencia en programación Python para robótica y visión por computador en proyectos de investigación, 
-            conocimientos de <strong>bases de datos relacionales (SQL) y Cloud</strong>.
-          </p>
-          <p>
-            En busca de nuevos retos e interesado en trabajar <strong>con bases de datos</strong>, <strong>cloud</strong>, <strong>recolección</strong>, <strong>procesamiento</strong> y <strong>analítica de datos</strong>. 
-            Y mediante la apropiación tecnológica, potenciar las instituciones latinoamericanas..
-          </p>
-          <p>
-            <strong>¿Qué problema, puedo ayudarte a solucionar?</strong>
-          </p>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="icon" type="image/png" href="assets/datalogo.png" />
+    -->
+  <title>dataclougui</title>
+  <meta name="description"
+    content="Hola, soy Guillermo, Ingeniero mecatrónico apasionado por la programación, la nube, el manejo y la extracción de datos." />
+  <meta property="og:title" content="dataclougui" />
+  <meta property="og:description"
+    content="Hola, soy Guillermo, Ingeniero mecatrónico apasionado por la programación, la nube, el manejo y la extracción de datos." />
+  <meta property="og:image" content="assets/fotoguillermo.jpg" />
+  <meta property="og:url" content="https://datacloudgui.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <nav class="menu">
+    <div class="menu--content">
+      <div class="menu--content__logo">
+        <a href="/"><img src="assets/Datacloud2.png" alt="Datacloudgui" /></a>
       </div>
-    </section>
-    <div id="proyectos" class="container">
-      <div class="title">
-        <p class="container--title">Algunos de mis proyectos</p>
+      <div class="menu--content__item">
+        <a href="#projects" rel="noopener noreferrer">Mis proyectos</a>
       </div>
-      <div class="container--post">
-        <a href="#" target="_blank">
-          <div class="container--post__card">
-            <div class="post--card__img">
-              <img
-                src="assets/scraper.png"
-                alt="scraper"
-              />
-            </div>
-            <div class="post--card__body">
-              <div class="post--card__about-post">
-                <p class="title-post">
-                  Web scraper de precios de tecnología.
-                </p>
-                <p class="description-post">
-                  Scraper programado en Python donde diseñe todo un proceso de Extracción, Transformación y Carga de datos
-                  (ETL), obteniendo los precios de la página de Alkosto y compare los valores con Pandas.
-                </p>
-              </div>
-            </div>
-          </div>
-        </a>
-        <a
-          href="#"
-          target="_blank"
-        >
-          <div class="container--post__card">
-            <div class="post--card__img">
-              <img
-                src="assets/rasp.png"
-                alt="imgaen"
-              />
-            </div>
-            <div class="post--card__body">
-              <div class="post--card__about-post">
-                <p class="title-post">
-                  Detección de codigos
-                </p>
-                <p class="description-post">
-                  Detección de codigos
-                </p>
-              </div>
-            </div>
-          </div>
-        </a>
+      <div class="menu--content__item">
+        <a href="#" rel="noopener noreferrer">Mi hoja de vida</a>
+      </div>
+      <div class="menu--content__item">
+        <a href="#contact" rel="noopener noreferrer">Contacto</a>
       </div>
     </div>
-    <div class="social--container">
-      <div class="title">
-        <p class="container--title">Contacto</p>
+  </nav>
+
+  <section class="data">
+    <div class="data--container">
+      <div class="data--container__img">
+        <img src="assets/fotoguillermo.jpg" alt="Guillermo foto" />
       </div>
-      <div class="social-networks">
-        <div class="social-networks--item">
-          <a href="https://github.com/datacloudgui" target="_blank"
-            ><img
-              src="assets/github.png"
-              height="50vh"
-              alt="GitHub Datacloudgui"
-          /></a>
-        </div>
-        <div class="social-networks--item">
-          <a href="https://www.linkedin.com/in/datacloudgui/" target="_blank"
-            ><img
-              src="assets/linkedin.png"
-              height="50vh"
-              alt="LinkedIn Datacloudgui"
-          /></a>
-        </div>
-        <div class="social-networks--item">
-          <a href="https://twitter.com/datacloudgui" target="_blank"
-            ><img
-              src="assets/twitter.png"
-              height="50vh"
-              alt="Twitter Datacloudgui"
-          /></a>
-        </div>
-        <div class="social-networks--item">
-          <a href="mailto:guillermo@datacloudgui.com" target="_blank"
-            >guillermo@datacloudgui.com
-          </a>
-        </div>
+      <div class="data--container__title">
+        <p class="title">💻 Guillermo Sánchez  👨‍💻</p>
+      </div>
+      <div class="data--container__description">
+        <p>
+          Ingeniero mecatrónico apasionado por la programación, la nube ☁️, <strong>el manejo y la extracción de
+            datos</strong>.
+          Con experiencia en programación Python para robótica y visión por computador en proyectos de investigación,
+          conocimientos de <strong>bases de datos relacionales (SQL) y Cloud</strong>.
+        </p>
+        <p>
+          En busca de nuevos retos e interesado en trabajar <strong>con bases de datos</strong>, <strong>cloud</strong>,
+          <strong>recolección</strong>, <strong>procesamiento</strong> y <strong>analítica de datos</strong>.
+          Y mediante la apropiación tecnológica, potenciar las instituciones latinoamericanas..
+        </p>
+        <p>
+          <strong>¿Qué problema, puedo ayudarte a solucionar?</strong>
+        </p>
       </div>
     </div>
-    
-    <footer class="container-footer">
-      <div class="menu--content">
-        <p>2020 Datacloudgui</p>
+  </section>
+  <div id="projects" class="container">
+    <div class="title">
+      <p class="container--title">Algunos de mis proyectos 🚀</p>
+    </div>
+    <div class="container--post">
+      <a href="#" target="_blank">
+        <div class="container--post__card">
+          <div class="post--card__img">
+            <img src="assets/scraper.png" alt="scraper" />
+          </div>
+          <div class="post--card__body">
+            <div class="post--card__about-post">
+              <p class="title-post">
+                Web scraper de precios de tecnología.
+              </p>
+              <p class="description-post">
+                Scraper programado en Python donde diseñe todo un proceso de Extracción, Transformación y Carga de datos
+                (ETL), obteniendo los precios de la página de Alkosto y compare los valores con Pandas.
+              </p>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a href="#" target="_blank">
+        <div class="container--post__card">
+          <div class="post--card__img">
+            <img src="assets/rasp.png" alt="imgaen" />
+          </div>
+          <div class="post--card__body">
+            <div class="post--card__about-post">
+              <p class="title-post">
+                Detección de codigos
+              </p>
+              <p class="description-post">
+                Detección de codigos
+              </p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="contact" class="social--container">
+    <div class="title">
+      <p class="container--title">Contacto 💬</p>
+    </div>
+    <div class="social-networks">
+      <div class="social-networks--item">
+        <a href="https://www.linkedin.com/in/datacloudgui/" target="_blank"><img src="assets/linkedin.png" height="50vh"
+            alt="LinkedIn Datacloudgui" /></a>
       </div>
-    </footer>
-  </body>
+      <div class="social-networks--item">
+        <a href="https://github.com/datacloudgui" target="_blank"><img src="assets/github.png" height="50vh"
+            alt="GitHub Datacloudgui" /></a>
+      </div>
+      <div class="social-networks--item">
+        <a href="https://twitter.com/datacloudgui" target="_blank"><img src="assets/twitter.png" height="50vh"
+            alt="Twitter Datacloudgui" /></a>
+      </div>
+      <div class="social-networks--item__mail">
+        <a href="mailto:guillermo@datacloudgui.com" target="_blank">guillermo@datacloudgui.com
+        </a>
+    </div>
+    </div>
+  </div>
+
+  <footer class="container-footer">
+    <div class="menu--content__footer">
+      <p>2020 Datacloudgui</p>
+    </div>
+  </footer>
+</body>
 </html>
