Finish 1st version and deploy in https://datacloudgui-static.web.app/

--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link rel="icon" type="image/png" href="assets/datalogo.png" />
-    -->
-  <title>dataclougui</title>
+  <link rel="icon" type="image/png" href="assets/logoPestana.png" />
+  <title>Dataclougui</title>
   <meta name="description"
     content="Hola, soy Guillermo, Ingeniero mecatrónico apasionado por la programación, la nube, el manejo y la extracción de datos." />
   <meta property="og:title" content="dataclougui" />
   <meta property="og:description"
     content="Hola, soy Guillermo, Ingeniero mecatrónico apasionado por la programación, la nube, el manejo y la extracción de datos." />
-  <meta property="og:image" content="assets/fotoguillermo.jpg" />
+  <meta property="og:image" content="assets/fotoguillermo2.jpg" />
   <meta property="og:url" content="https://datacloudgui.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -24,13 +21,13 @@
   <nav class="menu">
     <div class="menu--content">
       <div class="menu--content__logo">
-        <a href="/"><img src="assets/Datacloud2.png" alt="Datacloudgui" /></a>
+        <a href="/"><img src="assets/logodata.png" alt="Datacloudgui" /></a>
       </div>
       <div class="menu--content__item">
         <a href="#projects" rel="noopener noreferrer">Mis proyectos</a>
       </div>
       <div class="menu--content__item">
-        <a href="#" rel="noopener noreferrer">Mi hoja de vida</a>
+        <a href="https://www.canva.com/design/DAEDI5npCGU/fljM-zd738OkLWtvk8tbpw/view?utm_content=DAEDI5npCGU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" rel="noopener noreferrer">Mi hoja de vida</a>
       </div>
       <div class="menu--content__item">
         <a href="#contact" rel="noopener noreferrer">Contacto</a>
@@ -41,10 +38,10 @@
   <section class="data">
     <div class="data--container">
       <div class="data--container__img">
-        <img src="assets/fotoguillermo.jpg" alt="Guillermo foto" />
+        <img src="assets/fotoguillermo2.jpg" alt="Guillermo foto" />
       </div>
       <div class="data--container__title">
-        <p class="title">💻 Guillermo Sánchez  👨‍💻</p>
+        <p class="title">💻 Guillermo Sánchez 👨‍💻</p>
       </div>
       <div class="data--container__description">
         <p>
@@ -68,42 +65,71 @@
     <div class="title">
       <p class="container--title">Algunos de mis proyectos 🚀</p>
     </div>
+
     <div class="container--post">
-      <a href="#" target="_blank">
-        <div class="container--post__card">
-          <div class="post--card__img">
-            <img src="assets/scraper.png" alt="scraper" />
-          </div>
-          <div class="post--card__body">
-            <div class="post--card__about-post">
-              <p class="title-post">
-                Web scraper de precios de tecnología.
-              </p>
-              <p class="description-post">
-                Scraper programado en Python donde diseñe todo un proceso de Extracción, Transformación y Carga de datos
-                (ETL), obteniendo los precios de la página de Alkosto y compare los valores con Pandas.
-              </p>
-            </div>
+      <div class="container--post__card">
+        <div class="post--card__img">
+          <a href="https://github.com/datacloudgui/prices_scraper">
+            <img src="assets/Dataimage.jpg" alt="Data image" />
+          </a>          
+        </div>
+        <div class="post--card__body">
+          <div class="post--card__about-post">
+            <p class="title-post">
+              Web scraper de precios de tecnología.
+            </p>
+            <p class="description-post">
+              Scraper programado en Python para la extracción de precios de artículos tecnológicos.
+              Programé el proceso de Extracción, Transformación y Carga de datos (ETL).
+              El proyecto completo se encuentra disponible en github: <a
+                href="https://github.com/datacloudgui/prices_scraper">prices_scraper</a>
+            </p>
+            <span>Photo by <a
+                href="https://unsplash.com/@mbaumi?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Mika
+                Baumeister</a> on <a
+                href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
           </div>
         </div>
-      </a>
-      <a href="#" target="_blank">
-        <div class="container--post__card">
-          <div class="post--card__img">
-            <img src="assets/rasp.png" alt="imgaen" />
-          </div>
-          <div class="post--card__body">
-            <div class="post--card__about-post">
-              <p class="title-post">
-                Detección de codigos
-              </p>
-              <p class="description-post">
-                Detección de codigos
-              </p>
-            </div>
+      </div>
+
+
+      <div class="container--post__card">
+        <div class="post--card__img">
+          <img src="assets/barcode2.jpg" alt="barcode image" />
+        </div>
+        <div class="post--card__body">
+          <div class="post--card__about-post">
+            <p class="title-post">
+              Registro de inventarios con Drone
+            </p>
+            <p class="description-post">
+              Estoy programando la detección de códigos de barras por medio de imágenes.
+              Se registrará la ubicación y temperatura para el envio de información a una base de datos.
+              <strong>Próximamente el repositorio</strong>
+            </p>
           </div>
         </div>
-      </a>
+      </div>
+
+      <div class="container--post__card">
+        <div class="post--card__img">
+          <a href="https://www.canva.com/design/DAEDI8HXkrE/ri1j-WmsLNmtaNfLG_gCkw/view?utm_content=DAEDI8HXkrE&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">
+            <img src="assets/robotic.jpg" alt="robot image" />
+          </a>
+        </div>
+        <div class="post--card__body">
+          <div class="post--card__about-post">
+            <p class="title-post">
+              Proyectos en robótica.
+            </p>
+            <p class="description-post">
+              Conoce mis anteriores proyectos como investigador en universidades colombianas.
+              Proyectos en visión por computador y robótica móvil para control y navegación.
+            </p>
+            <span>Photo by <a href="https://unsplash.com/@lenin33?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Lenin Estrada</a> on <a href="https://unsplash.com/s/photos/robot?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div id="contact" class="social--container">
@@ -126,7 +152,7 @@
       <div class="social-networks--item__mail">
         <a href="mailto:guillermo@datacloudgui.com" target="_blank">guillermo@datacloudgui.com
         </a>
-    </div>
+      </div>
     </div>
   </div>
 
@@ -136,4 +162,5 @@
     </div>
   </footer>
 </body>
+
 </html>
